src/objects/COA_Restriction_Config__c.object
<CustomObject>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <picklist>
            <picklistValues>
                <fullName>Account Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Detail Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Name</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Name__c</fullName>
        <label>Integration Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>COA_Restriction_Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <label>COA Restriction Config</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Integration_Name__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Field_Value__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>COARC-{00000000}</displayFormat>
        <label>COA Restriction Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>COA Restriction Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>